style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');

@font-face {
    font-family: montserrat;
    src: url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
}

*,
*::before,
*::after {
    box-sizing: border-box;
    margin: 0;
}

body {
    font-family: montserrat;
    min-height: 100vh;
    display: grid;
    grid-template-columns: min(250px) 1fr;
    grid-template-rows: 100px 1fr 75px;
}

button {
    border: none;
    border-radius: 5px;
    padding: 2px 15px;
    background-color: #7695FF;
    color: white;
    height: 1.5em;
}

.overlay {
    position: fixed;
    top: 0;
    left: 0;
    min-width: 100vw;
    min-height: 100vh;
    background-color: rgba(50, 50, 50, 80%);
    display: flex;
    text-align: left;
    justify-content: center;
    align-items: center;
    display: none;
}

form p,
form input,
form label,
form button {
    width: 100%;
}

form button {
    height: 25px;
}

#book-read-yes,
#book-read-no {
    width: 2em;
}

#close-btn {
    position: absolute;
    top: 8px;
    left: 268px;
    margin: 0;
    padding: 0;
    font-size: 1.5em;
}

form {
    position: relative;
    line-height: 1.5;
    width: 300px;
    height: 375px;
    background-color: white;
    border-radius: 20px;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;
    padding: 20px;
}

header {
    background-color: #27403E;
    color: white;
    grid-column: 1 / 3;
    grid-row: 1 / 2;
    display: flex;
    gap: 20px;
    align-items: center;
    padding: 0 20px;
}

.sidebar button {
    width: 100%;
    height: 50px;
    font-size: 1.5em;
}

.sidebar {
    background-image: url(\simple-lighthouse-with-light-by-Vexels.png);
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
    background-color: grey;
    color: white;
    grid-column: 1 / 2;
    grid-row: 2 / 3;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    padding: 10px;
    gap: 10px;
}

main .books-container .card { 
    background-color: #fff;
    height: inherit;
    text-align: center;
    padding: 15px 15px;
    border-radius: 20px;
    display: flex;
    flex-direction: column;
    gap: 10px;
    align-items: center;
    justify-content: space-between;
}

main h1 {
    margin: 10px 10px 15px 10px;
    text-align: center;
}

main .books-container {
    height: 100%;
    padding: 0 10px;
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
    grid-template-rows: repeat(auto-fill, 210px);
    gap: 15px;
    align-items: center;
    justify-content: center;
}

main {
    background-color: #B4B4B2;
    grid-column: 2 / 3;
    grid-row: 2 / 3;
}

footer a:visited,
footer a {
    color: white;
}

footer {
    background-color: #27403E;
    color: white;
    grid-column: 1 / 3;
    grid-row: 3 / 4;
    text-align: center;
    display: flex;
    justify-content: center;
    align-items: center;
}

